# zdic-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/: Merged_Data.xlsx  Top8105CharactersData.xlsx  topchars.py
src/: exceptions.py  parser.py  scrap.py  scraper.py  scraptest.py  types.py  utils.py
test/: data.xlsx  test_data.py  test_data.xlsx  test_parser.py  test_scraper.py  test_utils.py
zdic_parser/: __init__.py  parser.py  parser_algorithms.py  scraper.py
